--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   
 <head>
   <meta charset="UTF-8">
-  <title>운영팀 웹 어드민 시스템</title>
+  <title>운영팀 웹 어드민 시스템 v1</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
